[metadata]
name = task-queue
url = https://github.com/seung-lab/python-task-queue/
summary = Multithreaded cloud queue client.
description-file = README.md
author = Ignacio Tartavull, William Silversmith, and others
author-email = ws9@princeton.edu
home-page = https://github.com/seung-lab/python-task-queue/
license = BSD
classifier =
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = taskqueue

[wheel]
universal = 1