[metadata]
name = task-queue
url = https://github.com/seung-lab/python-task-queue/
summary = Multithreaded cloud queue client.
description-file = README.md
author = Ignacio Tartavull, William Silversmith, and others
author-email = ws9@princeton.edu
home-page = https://github.com/seung-lab/python-task-queue/
license = BSD-3-Clause
classifier =
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = 
    taskqueue
    taskqueue_cli
